--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8090
+server.port=8040
 #spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
