--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+spring.mvc.pathmatch.use-suffix-pattern=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
